[gd_scene load_steps=19 format=2]

[ext_resource path="res://Controllers/interaction_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPC/dialogue_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://NPC/picture/boy.png" type="Texture" id=4]
[ext_resource path="res://NPC/script/child_boy4.gd" type="Script" id=5]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 5.09902

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 42.0

[node name="child_boy4" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -9 )
texture = ExtResource( 4 )
hframes = 3
vframes = 4
frame = 7

[node name="interaction_button2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -12, -32 )
scale = Vector2( 0.078125, 0.0625 )
pressed = ExtResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
visible = false

[node name="WanderController" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle_down = SubResource( 4 )
anims/idle_left = SubResource( 5 )
anims/idle_right = SubResource( 6 )
anims/idle_up = SubResource( 7 )
anims/walk_down = SubResource( 8 )
anims/walk_left = SubResource( 9 )
anims/walk_right = SubResource( 10 )
anims/walk_up = SubResource( 11 )

[node name="dialogue_area" parent="." instance=ExtResource( 2 )]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" parent="dialogue_area" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[connection signal="body_shape_entered" from="dialogue_area" to="." method="_on_dialogue_area_body_shape_entered"]
[connection signal="body_shape_exited" from="dialogue_area" to="." method="_on_dialogue_area_body_shape_exited"]

[editable path="dialogue_area"]
